fix broken style

--- a/app/assets/stylesheets/unregistered/unregistered.css.scss
+++ b/app/assets/stylesheets/unregistered/unregistered.css.scss
@@ -222,7 +222,7 @@ body.unregistered {
     color: #3d6804;
   }
 
-  body.unregistered div.page_description span.more_headings { padding-left:0px; }
+  div.page_description span.more_headings { padding-left:0px; }
 
   .reg_client_tfeild {
     width: 280px;
